--- a/css/contact.css
+++ b/css/contact.css
@@ -17,7 +17,7 @@
     margin-top: 5%;
     height: 70vh;
     padding: 0 5%;
-    background-color: var(--color-ligth);
+    background-color: rgba(255, 255, 255, 0.252);
   }
   
   .other-contact {
