--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,10 @@ footer a,
   background-color: var(--color-accent);
 }
 
+.prev-nex {
+  margin-top: 100px;
+}
+
 /* ==========================================
   ============== FORMATION MAIN ============= */
 .formal {
@@ -236,8 +240,9 @@ footer a,
 }
 
 
-
-
+a {
+  cursor: var(--cur-point), auto !important;
+}
 
 
 
